--- a/public/css/media.css
+++ b/public/css/media.css
@@ -36,11 +36,14 @@
   .company-grid {
     grid-template-columns: 1fr;
   }
-  .company-grid img {
-    order: 1;
+  .ag-section.company img.company-img {
+    order: 1 !important;
   }
-  .company-grid .company-content {
-    order: 2;
+  .ag-section.company div.company-content {
+    order: 2 !important;
+  }
+  .company-img {
+    max-height: 500px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -129,9 +132,15 @@
   .ag-news-cards.global-grid {
     grid-template-columns: repeat(2, 1fr);
   }
-  .news-container .ag-news-card:first-of-type { grid-area: 1/1/1/3;}
+  .news-container .ag-news-card:first-of-type {
+    grid-area: 1/1/1/3;
+  }
   .recent-news-container {
     grid-column: unset;
+  }
+  /* Company */
+  .company-img {
+    max-height: 400px;
   }
 }
 @media screen and (max-width: 740px) {
@@ -147,7 +156,9 @@
   .ag-news-cards.global-grid {
     grid-template-columns: 1fr;
   }
-  .news-container .ag-news-card:first-of-type { grid-area: 1;}
+  .news-container .ag-news-card:first-of-type {
+    grid-area: 1;
+  }
   .ag-article-copy h3 {
     font-size: 16px;
   }
@@ -199,6 +210,9 @@
   }
   .stat-container {
     margin: 25px;
+  }
+  .company-img {
+    max-height: 300px;
   }
 }
 @media screen and (max-width: 480px) {
